[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name            = "plmrecomb"
version         = "0.1.0"
description     = "Multi-turn tool-use RL (GRPO) for any tool. Modal-ready."
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
modal = ["modal"]
wandb = ["wandb"]

[tool.setuptools.packages.find]
where = ["."]